package pt.trekio.misc

enum class TrailType {
    PRIVATE,
    IN_TEST,
    PUBLIC,
}
