classDiagram
    class Username {
        +value: string
    }

    class Email {
        +value: string
    }

    class UserRank {
        <<enumeration>>
        NEW
        VERIFIED
    }

    class User {
        +id: unsigned long
        +username: Username
        +email: Email
        +passwordValidInfo: string
        +rank: UserRank
    }

    class Token {
        +uid: unsigned long
        +validationInfo: string
        +lastUse: kotlin.Instant
    }

    class Point {
        +latitude: Double
        +longitude: Double
    }

    class TrailType {
        <<enumeration>>
        PRIVATE
        IN_TEST
        PUBLIC
    }

    class TrailDifficulty {
        <<enumeration>>
        BEGINNER
        INTERMEDIATE
        ADVANCED
    }

    class Trail {
        +id: unsigned long
        +name: string
        +creator: unsigned long
        +start: Point
        +end: Point
        +path: List~Point~
        +type: TrailType
        +difficulty: TrailDifficulty
        +parentTrail: unsigned long?
    }

    class Hike {
        +id: unsigned long
        +hiker: unsigned long
        +trail: unsigned long
        +entry: Point
        +exit: Point?
    }

    User *-- Username
    User *-- Email
    User *-- UserRank
    User --o Token
    User --o Trail
    User --o Hike
    Trail *-- Point
    Trail *-- TrailType
    Trail *-- TrailDifficulty
    Trail --o Hike
    Hike *-- Point
